--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .link {
   color: black;
-  font-size: 26px;
+  font-size: 18px;
   text-decoration: none;
 }
 .nav {
@@ -10,4 +10,10 @@
 .active {
   color: red;
   text-decoration: underline;
+}
+
+.container {
+  padding: 15px;
+  padding-left: 30px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
